tests/paczka1/fuzzy1/73384173.err
Error in line 16: wZcDZntnbl1 S441 0,6
Error in line 10: fZhhOKSZfj S727 90,4
Error in line 18: mwQo7DdaSUz S441 72,3
Error in line 32: mwQo7DdaSUz S675 78,1
